# misk_real_estate

./: pyproject.toml
misk_real_estate/: hooks.py  modules.txt  patches.txt
misk_real_estate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
misk_real_estate/fixtures/: custom_field.json  floor.json  item.json  misk_real_estate_settings.json  number_card.json  payment_plan.json  property_setter.json  role.json  unit_type.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
misk_real_estate/patches/: backfill_quotation_booking_links.py  migrate_pdc_to_allocations.py
misk_real_estate/pdc_management/cron/: auto_invoice.py
misk_real_estate/pdc_management/doctype/pdc_allocation/: pdc_allocation.json  pdc_allocation.py
misk_real_estate/pdc_management/doctype/pdc_batch/: pdc_batch.js  pdc_batch.json  pdc_batch.py  test_pdc_batch.py
misk_real_estate/pdc_management/doctype/pdc_batch_item/: pdc_batch_item.json  pdc_batch_item.py
misk_real_estate/pdc_management/doctype/pdc_bounce_reason/: pdc_bounce_reason.js  pdc_bounce_reason.json  (+2 more)
misk_real_estate/public/css/: misk_real_estate.css
misk_real_estate/public/js/: misk_icons.js
misk_real_estate/real_estate/: cancel_one_pdc.py  cleanup_pdcs.py  delete_cancelled.py  generate_demo_pdcs.py  verify_counts.py
misk_real_estate/real_estate/custom/: item.js  item_list.js  journal_entry.json  purchase_invoice.json  purchase_invoice_item.json  quotation.js  quotation_hooks.py  quotation_list.js
misk_real_estate/utils/: import_units.py  seed.py
misk_real_estate/www/: user-guide.html
(+34 files in other folders)
